# to_do_list

./: .env.example  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: c8327053e329_create_users_table.py  eebd9e9ab08e_create_todos_table.py
src/: app.py  db.py  enums.py  models.py  schemas.py  security.py  settings.py
src/routers/: auth.py  todos.py  users.py
src/security/: auth.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
